fixed text align and CSS details for BlockLinkBtn

--- a/components/ui/BlockLink/BlockLink.module.scss
+++ b/components/ui/BlockLink/BlockLink.module.scss
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   text-align: center;
   row-gap: 12px;
 
@@ -27,9 +28,13 @@
   }
   @include tablet {
     height: 200px;
+    row-gap: 24px;
+    border-radius: 15px;
   }
   @include desktop {
     height: 100%;
+    row-gap: 24px;
+    border-radius: 15px;
   }
 }
 
